--- a/index.html
+++ b/index.html
@@ -1275,28 +1275,30 @@
 </head>
 <body>
     <!-- Header & Navigation -->
-    <header>
-    <div class="container" style="display:flex; justify-content:space-between; align-items:center;">
+ <header>
+  <div class="container header-container">
+      <div class="header-left" style="display:flex; align-items:center; gap:8px;">
+          <img src="coffee.png" alt="Logo DREI" style="height:60px; width:auto; display:block;">
+          <a href="#" class="logo">DREI<span>COFFEESHOP</span></a>
+      </div>
 
-        <!-- KIRI: LOGO + NAMA -->
-        <div style="display:flex; align-items:center; gap:8px;">
-            <img src="coffee.png" alt="Logo" style="height:100px; width:auto;">
-            <a href="#" class="logo">DREI<span>COFFEESHOP</span></a>
+
+            <button class="mobile-menu-btn" id="mobileMenuBtn">
+                <i class="fas fa-bars"></i>
+            </button>
+            
+            <ul class="nav-links" id="navLinks">
+                <li><a href="#home" class="active">Beranda</a></li>
+                <li><a href="#menu">Menu</a></li>
+                <li><a href="#order">Pesan Online</a></li>
+                <li><a href="#gallery">Galeri</a></li>
+                <li><a href="#about">Tentang Kami</a></li>
+                <li><a href="#blog">Blog</a></li>
+                <li><a href="#testimonials">Ulasan</a></li>
+                <li><a href="#events">Acara</a></li>
+                <li><a href="#contact">Kontak</a></li>
+            </ul>
         </div>
-
-        <!-- KANAN: MENU -->
-        <ul class="nav-links" style="margin:0;">
-            <li><a href="#home">Beranda</a></li>
-            <li><a href="#menu">Menu</a></li>
-            <li><a href="#order">Pesan Online</a></li>
-            <li><a href="#gallery">Galeri</a></li>
-            <li><a href="#about">Tentang</a></li>
-            <li><a href="#contact">Kontak</a></li>
-        </ul>
-
-    </div>
-</header>
-
     </header>
 
     <!-- Hero Section -->
